--- a/index.html
+++ b/index.html
@@ -14,11 +14,17 @@
     </div>
   </div>
 
+  <div class="time-card">
 
     <div class="card" id="countdown-wrap" style="display:none;">
       <span id="countdown" style="font-weight: bold;"></span>
     </div>
+    <hr id="separator" style="display: none;">
+    <div class="card" id="time-wrap" style="display:none;">
+      <span id="time" style="font-weight: normal"></span>
+    </div>
 
+  </div>
 
     <div id="controlli">
       <label>
@@ -28,6 +34,10 @@
       <label>
         Abilita colore:
         <input type="checkbox" id="coloreCheck" checked>
+      </label>&nbsp|&nbsp
+      <label>
+        Abilita orologio:
+        <input type="checkbox" id="timeCheck" checked>
       </label>
     </div>
   </div>
@@ -37,6 +47,15 @@
     background-color: #f1f1f1;
     font-family: 'Montserrat', sans-serif;
   }
+
+  .time-card{
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
   .card {
     margin: 0 auto;
     padding: 50px;
@@ -47,14 +66,14 @@
     background-color: #fff;
     border-radius: 12px;
     box-shadow: 0 10px 10px -5px #909090;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
   }
 
   #countdown {
     font-size: 180px;
+  }
+
+  #time{
+    font-size: 100px;
   }
 </style>
 <script src="app.js"></script>
